Fixing some problems with alignment!

--- a/Home/index.css
+++ b/Home/index.css
@@ -217,6 +217,10 @@ body {
 
 .what-container {
     border: solid;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     border-radius: 50px;
     border-top-right-radius: 0px;
     border-top-left-radius: 0px;
